# company_crud

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_04_02_1150-37a739f16cfd_add_existing_companys_table.py  2025_04_02_1155-a79337990da3_add_company_description.py  2025_04_02_1226-8ae6b5df1c5a_fix_models_structure.py  2025_04_09_1037-0776c6685ecd_dd_password_hash_to_ser.py  2025_04_09_1048-7c80c9a32633_added_username_and_active_fields_to_ser_.py  2025_04_11_1309-aa004d06f699_company_address_unique_alse_from_.py  2025_04_12_2137-af6600337735_added_role_field_to_user_model.py  2025_04_18_2256-0e5239a49537_active_field_for_user_default_false.py  2025_04_21_1424-7b9ffdd71254_add_messages_table_and_link_to_users.py
app/api/: __init__.py  companies.py  jwt.py  users.py
app/auth/: auth_password.py  auth_validation.py  dependencies.py  jwt.py  utils_jwt.py
app/chat/: __init__.py  chat_utils.py  websockets.py
app/core/: config.py
app/core/models/: __init__.py  base.py  company.py  db_helper.py  messages.py  user.py
app/core/schemas/: schemas.py
app/crud/: companies.py  users.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.css  index.html
frontend/src/: App.js
frontend/src/components/: Navbar.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: DashboardPage.js
frontend/src/pages/auth/: LoginPage.js
frontend/src/pages/chat/: Chat.js  ChatPage.js
frontend/src/pages/companies/: CompaniesPage.js  CompanyFormPage.js
frontend/src/pages/users/: UserFormPage.js  UsersPage.js
nginx/: default.conf
