[project]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksym Chesherov",email = "chesherow22d@gmail.com"}
]
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
