#[tool.poetry]
#name = "crud-fastapi"
#version = "0.1.0"
#description = ""
#authors = [
#    {name = "Maksym Chesherov",email = "chesherow22d@gmail.com"}
#]
#package-mode = false
##readme = "README.md"
#requires-python = ">=3.12"
#dependencies = [
#    "fastapi (>=0.115.12,<0.116.0)",
#    "uvicorn[standard] (>=0.34.0,<0.35.0)",
#    "pydantic[email] (>=2.11.2,<3.0.0)",
#    "black (>=25.1.0,<26.0.0)",
#    "sqlalchemy (>=2.0.40,<3.0.0)",
#    "asyncio (>=3.4.3,<4.0.0)",
#    "asyncpg (>=0.30.0,<0.31.0)",
#    "alembic (>=1.15.2,<2.0.0)",
#    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
#    "bcrypt (>=4.3.0,<5.0.0)",
#    "auth (>=0.5.3,<0.6.0)",
#    "python-multipart (>=0.0.20,<0.0.21)"
#]
#
#
#[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = ["Maksym Chesherov <chesherow22d@gmail.com>"]

package-mode = false
#requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
pydantic = {extras = ["email"], version = ">=2.11.2,<3.0.0"}
black = ">=25.1.0,<26.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
asyncio = ">=3.4.3,<4.0.0"
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.15.2,<2.0.0"
pyjwt = {extras = ["crypto"], version = ">=2.10.1,<3.0.0"}
bcrypt = ">=4.3.0,<5.0.0"
auth = ">=0.5.3,<0.6.0"
python-multipart = ">=0.0.20,<0.0.21"
pydantic-settings = "^2.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
